# panoptes

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/skills/: add-agent.md  add-agent.skill.json  add-input-mode.md  add-input-mode.skill.json  add-tests.md  add-tests.skill.json  add-view.md  add-view.skill.json  clippy-fix.md  clippy-fix.skill.json  create-menu-selection.md  create-menu-selection.skill.json  doc-sync.md  doc-sync.skill.json  pre-commit.md  pre-commit.skill.json  release.md  release.skill.json  test-coverage.md  test-coverage.skill.json
.codex/: config.toml
claude-wrapper/: Cargo.toml
claude-wrapper/src/: frame.rs  input.rs  lib.rs  main.rs  pty.rs  vterm.rs  wrapper.rs
docs/: CODEX_SCROLLING_DEBUG.md  CONFIG_GUIDE.md  FAQ.md  INSTALLATION.md  KEYBOARD_REFERENCE.md  PHASE1_IMPLEMENTATION.md  PHASE3_TICKETS.md  PHASES.md  PRODUCT.md  TECHNICAL.md  TROUBLESHOOTING.md
skills/add-agent/: SKILL.md
skills/add-input-mode/: SKILL.md
skills/add-tests/: SKILL.md
skills/add-view/: SKILL.md
skills/clippy-fix/: SKILL.md
skills/create-menu-selection/: SKILL.md
skills/doc-sync/: SKILL.md
skills/pre-commit/: SKILL.md
skills/release/: SKILL.md
skills/start-ticket/: SKILL.md
skills/sync-agent-docs/: SKILL.md
skills/test-coverage/: SKILL.md
src/: agent_profiles.rs  app.rs  claude_json.rs  config.rs  lib.rs  main.rs  path_complete.rs  persistence.rs
src/agent/: adapter.rs  claude.rs  codex.rs  events.rs  mod.rs  shell.rs
src/app/: background.rs  event_loop.rs  input_mode.rs  mod.rs  nav.rs  state.rs  view.rs
src/claude_config/: mod.rs  store.rs
src/codex_config/: mod.rs  store.rs
src/focus_timing/: mod.rs  stats.rs  store.rs  tracker.rs
src/git/: mod.rs  worktree.rs
(+82 files in other folders)
