[package]
name = "claude-wrapper"
version = "0.1.0"
edition = "2021"
description = "Standalone wrapper for Claude Code with PTY, terminal emulation, and customizable frame"
license = "MIT"

[lib]
name = "claude_wrapper"
path = "src/lib.rs"

[[bin]]
name = "claude-wrapper"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1", features = ["full"] }

# PTY handling
portable-pty = "0.8"

# Terminal emulation
vt100 = "0.16"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unix PTY support
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
